--- a/_posts/2020-05-01-howl-2020.markdown
+++ b/_posts/2020-05-01-howl-2020.markdown
@@ -20,13 +20,12 @@ who champagned in airports or drank dinner after Happy Hours, mute,
 or invigorated their voices night after night
 with plans, with schemes, with magnate visions, last nightcaps and lust and escort calls, unabated city views of pinkening skies and spires in daydreams of deals agreed in London and Frankfurt, reverberating in the hidden accounts of Men elsewhere,  
 Investment opportunities in losses, top-floor c-suite confidential calls, salutations over the skyline, downtown buildings of empty nothing for-sale windows blurring price, cranes and dirt and future waterfront in the melting summer nights of Brookyln, self-styled musings on pure utility,  
-who chained themselves to small screens for the endless search from one life to another life on stimulants until the strain of eyes and hunger snapped them away worn and wearisome of want numb of brain and drained of desire in the device's glow,
+who chained themselves to small screens for the endless search from one life to another life on stimulants until the strain of eyes and hunger snapped them away worn and wearisome of want numb of brain and drained of desire in the device's glow,  
 who jumped all hours to vibration beeps everywhere never there and humored the conversation in wherever anywhere, ignoring just enough to catch the essence of whatever,  
 who texted continuously never looking out across the Hudson missing the strange moon entirely,  
 lost automatons of monologue conversationalists ascending the lifts up to rooftops for self-images with city lights and dark skies,
 fun imitating posting editing pretending truths and memories and histories and beauty still remove the blemishes and pain and shame,  
 whole intellects consumed by creative destruction, lifestyle start-ups, with determined eyes, the elevator pitch poised for the boardroom,
-who emerged from somewhere in New Jersey dreaming of tower riches gleaned from highways cutting industrial heartlands,  
-winning management praise and mortgage fixed-interest rates and travel to L.A. under debt forever in up-and-coming two-bedroom,  
+who emerged from somewhere in New Jersey dreaming of tower riches gleaned from highways cutting industrial heartlands,  winning management praise and mortgage fixed-interest rates and business travel under debt forever in up-and-coming two-bedroom,  
 who paced hallways up and down at midnight in the quiet dark wondering what to do, and after, forgetting the problem
 ...
